--- a/install_ubuntu.tex
+++ b/install_ubuntu.tex
@@ -1,4 +1,4 @@
-% Created 2025-03-03 Mon 14:18
+% Created 2025-03-03 Mon 14:25
 \documentclass[10pt]{article}
 \usepackage{graphicx}
 \usepackage{longtable}
@@ -39,7 +39,7 @@
 \tableofcontents
 
 \section{Preparing and booting a Ubuntu 22.04 media}
-\label{sec:orgeecd43e}
+\label{sec:org7be3dcd}
 An \href{https://ubuntu.com/download/amd-xilinx}{official Ubuntu image} exists and is
 provided by Xilinx, allowing the OS installation to be quick and
 straightforward.
@@ -98,12 +98,12 @@ host# ssh ubuntu@192.168.4.11
 \end{minted}
 
 \section{Network and admin setups}
-\label{sec:org8d2189a}
+\label{sec:org2395c7f}
 This section presents a variety of extra convenience configurations
 that can be used when setting-up the Kria board.
 
 \subsection{Static IP address}
-\label{sec:orga65c05e}
+\label{sec:orge5ad797}
 A static IP can be set by writing the following
 configuration into your \texttt{netplan} configuration file\footnote{The \texttt{chmod} command is used to update the permissions and silence some warnings}.
 
@@ -139,7 +139,7 @@ sudo netplan apply
 \end{minted}
 
 \subsection{[facultative] \texttt{root} password}
-\label{sec:org309d12f}
+\label{sec:org1e2aede}
 \begin{tcolorbox}[colback=orange!5!white,colframe=orange!75!black]
 \textbf{WARNING}: Depending on your use-case, the setup presented in this
 subsection can be a critical security breach as it remove the need for a root
@@ -174,7 +174,7 @@ sudo reboot now
 \end{minted}
 
 \subsection{Adding Xilinx specific repositories}
-\label{sec:orgc7dcc31}
+\label{sec:org86be99d}
 The following commands will add \texttt{PPA} repositories that are specific for Xilinx boards using Ubuntu.
 It is then possible to update the package list and eventually upgrade to some new packages.
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
@@ -185,14 +185,14 @@ sudo apt upgrade
 \end{minted}
 
 \subsection{[facultative] Installing Docker}
-\label{sec:org21b2934}
+\label{sec:org74416bd}
 It is possible to have a version of Docker installed simply by using the available repository,
 but since we are on Ubuntu, a PPA is available from Docker in order to have the most up-to-date version.
 
 Following \href{https://docs.docker.com/engine/install/ubuntu/\#install-using-the-repository}{the official documentation}, the following steps can be taken to install the latest version of
 Docker on a Ubuntu system. The last command is meant to test the install.
 If everything went smoothly, you should see something similar to what is presented
-in the figure \ref{fig:org5e030a6} below, after the commands:
+in the figure \ref{fig:orgeab6332} below, after the commands:
 
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
 sudo apt-get update
@@ -223,11 +223,11 @@ docker run hello-world
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.7\textwidth]{img/hello-docker.png}
-\caption{\label{fig:org5e030a6}The return of a successful run of the \texttt{hello world} test Docker container.}
+\caption{\label{fig:orgeab6332}The return of a successful run of the \texttt{hello world} test Docker container.}
 \end{figure}
 
 \subsection{[recommended] Purging \texttt{snap}}
-\label{sec:orga508de7}
+\label{sec:org6e3b37e}
 As the desktop-specific software are not used at all in the case
 of our project, there are some packages that can be purges in order for the
 system to become more lightweight.
@@ -267,7 +267,7 @@ systemctl list-units | grep snapd
 \end{minted}
 
 \subsection{[facultative] Other unused heavy packages}
-\label{sec:orgdf8cbaf}
+\label{sec:org4244f7d}
 Some other pieces of software can safely be removed since the desktop is
 not to be used.
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{sh}
@@ -280,7 +280,7 @@ sudo reboot now
 \end{minted}
 
 \subsection{[facultative] Slow boot services to disable}
-\label{sec:org70972db}
+\label{sec:org46b7d05}
 These packages (in particular the first one) are taking up a LOT of time at boot while providing no benefits\footnote{The CUPS and Docker services will be activated when used instead of during boot time.}.
 
 It is possible to disable them as follow:
@@ -299,7 +299,7 @@ sudo systemd-analyze blame
 \end{minted}
 
 \subsection{[facultative] Adding a swap partition}
-\label{sec:org0c0b522}
+\label{sec:orgcc4b31a}
 This part is very optional, in particular as it might slow down a bit the
 boot time of the board (\textasciitilde{}2s), however it might become handy to have swap memory
 available to avoid system failure under heavy use.
@@ -332,7 +332,7 @@ reboot now
 \end{minted}
 
 \subsection{[OLD] Enabling \texttt{remoteproc} with Device-Tree patching}
-\label{sec:org7ecd814}
+\label{sec:org0a38574}
 One of the advantage of this Kria board, as cited previously, is the presence of
 multiple types of core (APU, MCU, FPGA) on the same chip.
 
@@ -409,14 +409,15 @@ If it is the case, it means that the patch was successful and  that the remote p
 ready to be used!
 \pagebreak
 
-\subsection{[NEW] Enabling \texttt{remoteproc} for RPMsg in userspace using a device-tree patching}
-\label{sec:org6f0d662}
+\subsection{[NEW] Enabling \texttt{remoteproc} for RPMsg in userspace with device-tree patch}
+\label{sec:org4c7e49b}
 \subsubsection{Patching the device tree for RPMsg in userspace}
-\label{sec:org282a27c}
+\label{sec:org5aafe37}
+The  \texttt{system\_uio.patch}
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{bash}
 sudo dtc /sys/firmware/fdt 2> /dev/null > system.dts
 
-wget https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/raw/806dcaa16ed9f2571539fb98e9f027226a485a6a/src/system_uio.patch
+wget https://gitlab.com/sunoc/xilinx-kria-kv260-documentation/-/raw/main/src/system_uio.patch
 
 patch system.dts < system_uio.patch
 
@@ -426,7 +427,7 @@ sudo reboot now
 \end{minted}
 
 \subsubsection{Checking the patching}
-\label{sec:org58db94a}
+\label{sec:org98b8447}
 If everything went correctly, on reboot and re-logging in the device, you should
 see an output to the following command:
 \begin{minted}[frame=single,framesep=2mm,baselinestretch=1.2,linenos,breaklines,fontsize=\footnotesize]{bash}
@@ -434,7 +435,7 @@ ls /sys/class/remoteproc/
 \end{minted}
 
 \subsection{[DEPRECATED] Proxy and DNS}
-\label{sec:org24a4130}
+\label{sec:org9df441f}
 \begin{tcolorbox}[colback=orange!5!white,colframe=orange!75!black]
 \textbf{WARNING}: This setup is not needed anymore when using Honda-sensei's lab
 wired network.
@@ -465,7 +466,7 @@ echo "export no_proxy=\"localhost, 127.0.0.1,::1\"" >> ~/.bashrc
 Eventually the board can be rebooted in order for the setup to get applied cleanly.
 
 \subsection{[DEPRECATED] Jupyter notebook setup}
-\label{sec:orge32ca3c}
+\label{sec:orga5556c4}
 Here are some instruction on how to install and setup Jupyter on a KRIA board,
 accessing it remotely and using it for making data analysis.
 
@@ -495,24 +496,24 @@ From there, it is possible to use the displayed URL (something that looks like
 \texttt{http://localhost:8888/tree?token}) to access the remote Notebook system from a local web browser.
 It is possible to do so with \texttt{localhost} since we have the \texttt{ssh} port map connection going on.
 
-Eventually creating Notebooks and stuff, it is possible to obtain a situation like shown in the figure \ref{fig:orga4f7602} below.
+Eventually creating Notebooks and stuff, it is possible to obtain a situation like shown in the figure \ref{fig:org31dc01b} below.
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.6\textwidth]{img/jupyter.png}
-\caption{\label{fig:orga4f7602}A test Jupyter Notebook for CSV data analysis.}
+\caption{\label{fig:org31dc01b}A test Jupyter Notebook for CSV data analysis.}
 \end{figure}
 
 \subsection{[TODO] Using a PetaLinux kernel in Ubuntu}
-\label{sec:org1b9190b}
+\label{sec:org548dcb6}
 TBD
 
 \section{RPMsg standalone evaluation}
-\label{sec:org9e7b6ef}
+\label{sec:org492cc0a}
 \subsection{[TODO] RPMsg Cortex R5F demonstration firmware}
-\label{sec:orge565501}
+\label{sec:orgee3dec0}
 \subsection{RPMsg \texttt{echo\_test} software}
-\label{sec:org34b48fd}
+\label{sec:orgdfa4bb2}
 In order to test the deployment of the firmware on the R5F side, and in particular
 to test the RPMsg function, we need some program on the Linux side of the KRIA
 board to "talk" with the real-time side.
